--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "alpha-omega-conf",
   "description": "Configurator library. Add this configurator to your project or framework and manage multiple configurations in better way",
   "repository": {},
-  "license": "MIT",
-  "version": "0.1.7",
+  "license": "Apache-2.0",
+  "version": "0.1.8",
   "author": "Anton Repin <ar@xdire.io>",
   "main": "./dist/main.js",
   "types": "./dist/main.d.ts",
